[tool.poetry]
name = "telescope-ec2-age"
version = "0.3.0"
description = "AMI build age finder for Telemetry"
readme = "README.md"
authors = ["Samuel Allwright <71259281+samallwright@users.noreply.github.com>"]
maintainers = ["Team Telemetry"]
packages = [
  { include = "telemetry" }
]

[tool.poetry.dependencies]
graphyte = "^1.6.0"
fire = "^0.3.1"
boto3 = "^1.18.52"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
