[tool.poetry]
name = "telescope-ec2-age"
version = "0.3.0"
description = "AMI build age finder for Telemetry"
readme = "README.md"
authors = ["Samuel Allwright <71259281+samallwright@users.noreply.github.com>"]
maintainers = ["Team Telemetry"]
packages = [
  { include = "telemetry" }
]

[tool.poetry.dependencies]
python = ">=3.6,<4"
graphyte = "^1.6.0"
fire = "^0.3.1"
boto3 = "1.18.48"
botocore = "1.21.48"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
